--- a/views/index.pug
+++ b/views/index.pug
@@ -1,5 +1,8 @@
 extends layout.pug
 
+block header_scripts
+  link(rel='stylesheet' href='https://unpkg.com/nprogress@0.2.0/nprogress.css')
+
 block content
   div.container
     h1 Lyrebird Test
