plucker -> lyrebird-demo

--- a/views/index.pug
+++ b/views/index.pug
@@ -6,7 +6,7 @@ block header_scripts
 block content
   div.container
     div.row
-      h1 Lyrebird Test
+      h1 Lyrebird Demo
       form#form
         input#input
         button#submit.button-primary(disabled) Submit
