--- a/views/index.pug
+++ b/views/index.pug
@@ -10,6 +10,10 @@ block content
       form#form
         input#input
         button#submit.button-primary(disabled) Submit
+    div.row
+      h5.nav
+        span.right
+          a(href="/recordings/all") all
     div.row#recording-history
       h2 History
       ul#history-list
