Proof of concept for getting access_token

--- a/views/index.pug
+++ b/views/index.pug
@@ -4,6 +4,7 @@ block header_scripts
   link(rel='stylesheet' href='https://unpkg.com/nprogress@0.2.0/nprogress.css')
 
 block content
+  h1= foo
   div.container
     div.row
       h1 Lyrebird Demo
