--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,5 +1,6 @@
-@import "normalize";
-@import "skeleton";
-@import "util";
-@import "fonts";
-@import "index";
+@import 'normalize';
+@import 'skeleton';
+@import 'util';
+@import 'fonts';
+@import 'screensaver';
+@import 'index';
