--- a/views/index.pug
+++ b/views/index.pug
@@ -18,7 +18,12 @@ block content
     div.row#recording-history
       h2 History
       ul#history-list
+    div#camera-root
+    div#video-wrap
+      video(src='/video/screensaver.mp4', loop)
 
 block footer_scripts
   script(src='/js/lib/jquery.min.js')
+  script(src='https://download.affectiva.com/js/3.2/affdex.js')
+  //- script(src='/js/lib/affdex.js')
   script(src='/js/main.bundle.js')
