Capture screenshot on utterance generated, pass to server

--- a/views/index.pug
+++ b/views/index.pug
@@ -23,6 +23,7 @@ block content
       video(src='/video/screensaver.mp4', loop)
 
 block footer_scripts
+  script(src='/js/lib/capture-video-frame.js')
   script(src='/js/lib/jquery.min.js')
   script(src='https://download.affectiva.com/js/3.2/affdex.js')
   //- script(src='/js/lib/affdex.js')
