--- a/views/index.pug
+++ b/views/index.pug
@@ -13,7 +13,7 @@ block content
         button#submit.button-primary(disabled) Submit
     div#camera-root
     div#video-wrap
-      video(src='/video/screensaver.mp4', loop)
+      video(src='https://s3.amazonaws.com/conversational-exhibit/lyrebird-loop.mp4', loop)
 
 block footer_scripts
   script(src='/js/lib/capture-video-frame.js')
