--- a/views/index.pug
+++ b/views/index.pug
@@ -8,9 +8,10 @@ block content
   div.container
     div.row
       h1 Lyrebird Demo
-      form#form
-        input#input
-        button#submit.button-primary(disabled) Submit
+      h3#status Press Spacebar to Record
+      //- form#form
+      //-   input#input
+      //-   button#submit.button-primary(disabled) Submit
     div#camera-root
     div#video-wrap
       video(src='https://s3.amazonaws.com/conversational-exhibit/lyrebird-loop.mp4', loop)
