Add volume status

--- a/views/index.pug
+++ b/views/index.pug
@@ -9,6 +9,8 @@ block content
     div.row
       h1 Lyrebird Demo
       h3#status Press Spacebar to Record
+      h5(style="display: none;") Volume: 
+        span#vol 0
       //- form#form
       //-   input#input
       //-   button#submit.button-primary(disabled) Submit
