--- a/src/scss/_index.scss
+++ b/src/scss/_index.scss
@@ -1,7 +1,7 @@
 html,
 body {
   overflow: hidden;
-  font-family: 'Calluna Sans', sans-serif;
+  font-family: 'calluna-sans', sans-serif;
   color: $white;
   height: 100vh;
   width: 100vw;
