Add screensaver video wrap

--- a/views/index.pug
+++ b/views/index.pug
@@ -20,6 +20,10 @@ block content
         p#fine-print-copy.lt-blue.tiny Designed by a Canadian start-up, Lyrebird already has been used to show how well-known voices can deliver messages they never actually said. Along with new video processing technology, the implications for "fake news" have raised alarms among journalists and media worldwide.
         div#squiggles
           img(src='/img/squiggles.png')
+  div#video-wrap
+    video
+      source(src='http://d32vnycoqqt3qz.cloudfront.net/loops/lyrebird-loop-simple.mp4', type='video/mp4', loop)
+      source(src='http://d32vnycoqqt3qz.cloudfront.net/loops/lyrebird-loop-simple.webm', type='video/webm', loop)
         
 
 //- block content
