--- a/views/layout.pug
+++ b/views/layout.pug
@@ -7,9 +7,9 @@ html
     meta(name='description', content='')
     meta(name='viewport', content='width=device-width, initial-scale=1')
     link(rel='stylesheet', href='/main.css')
-    include partials/favicon.pug
-    include partials/analytics.pug
-    include partials/socialMeta.pug
+    //- include partials/favicon.pug
+    //- include partials/analytics.pug
+    //- include partials/socialMeta.pug
     block header_scripts
   body(id=`${bodyId}`)
     main
