'white button' -> 'button'

--- a/views/index.pug
+++ b/views/index.pug
@@ -9,7 +9,7 @@ block content
       div#main-content
         div#instructions
           h1#jeff-say.lt-blue What do you want Jeff to say?
-          p#press-record.white.medium Press the white button below and speak clearly.
+          p#press-record.white.medium Press the button below and speak clearly.
           br
           p #[span(class="lt-blue") Hint:] Use longer phrases for better audio quality.
           hr#rule.lt-gray.thick
