Return sentence case transcription; Add 'generating' text before playing audio; Refactor setusertext; Style fixes

--- a/src/scss/_index.scss
+++ b/src/scss/_index.scss
@@ -141,9 +141,12 @@ body#index {
   }
 
   #user-text {
-    &:before,
-    &:after {
-      content: '"';
+    .generating-text,
+    .speaking-text {
+      &:before,
+      &:after {
+        content: '"';
+      }
     }
   }
 
