--- a/views/index.pug
+++ b/views/index.pug
@@ -20,6 +20,9 @@ block content
           h3.status#listening Listening<span class="ae"></span>
           h3.status#processing Processing<span class="ae"></span>
           h3.status#user-text
+            span.generating Generating: #[span(class="generating-text")]#[span(class="ae")]
+            span.speaking
+              span.speaking-text
           h3.status#message-text
             
     section#fine-print-wrap
