Explicit check to see if installation is true in template

--- a/views/index.pug
+++ b/views/index.pug
@@ -9,7 +9,7 @@ block content
       div#main-content
         div#instructions
           h1#jeff-say.lt-blue What do you want Jeff to say?
-          if installation
+          if installation == true
             p#press-record.white.medium Press the button below and speak clearly.
           else
             p#press-record.white.medium Press the spacebar and speak clearly.
